--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -33,6 +33,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  photo_view: ^0.15.0
+  just_audio: ^0.9.37
+  video_player: ^2.10.1
+  
   cupertino_icons: ^1.0.8
   sqflite: ^2.3.0
   sqflite_common_ffi: ^2.3.0
