--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -35,14 +35,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   photo_view: ^0.15.0
   just_audio: ^0.9.37
+  just_audio_windows: ^0.2.2
   video_player: ^2.10.1
+  location: ^8.0.1
+  file_picker: ^10.3.10
   
   cupertino_icons: ^1.0.8
   sqflite: ^2.3.0
   sqflite_common_ffi: ^2.3.0
   path: ^1.8.3
   shared_preferences: ^2.2.2
-  image_picker: ^1.0.7
   path_provider: ^2.1.1
   ffi: ^2.1.0
 
@@ -70,7 +72,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
