--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   just_audio: ^0.9.37
   just_audio_windows: ^0.2.2
   video_player: ^2.10.1
+  video_player_win: ^3.2.2
   location: ^8.0.1
   file_picker: ^10.3.10
   
